# roundme

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/balancer/: README.md  config.yaml
src/: analyze_rounding.rs  analyzer.rs  arithmetic.lalrpop  ast.rs  cli.rs  config.rs  constant.rs  expression_utils.rs  latex_generator.rs  lib.rs  main.rs  parser.rs  printer.rs  utils.rs
src/analyzer/: analyze_rounding.rs  ast.rs  simplify_expr.rs
src/parser/: arithmetic.lalrpop  formula_config.rs  input.rs  yaml.rs
src/printer/: latex_generator.rs
tests/: test_init.yaml
